# SpineAI-Python-Angular

./: .dockerignore  .gitlab-ci.yml  .gitmodules  Makefile  README.md
backend/: .gitignore  README.md  app.py  ingest_study.py  install.sh  pyproject.toml  run-py-unittests.sh  run-stylecheck.sh
backend/config/: default.yml  dev-docker.yml  development.yml  only_classify.yml  xsegment.yml
backend/lib/: .gitignore  bilwaj_lib.py  bilwaj_lib_test.py  classifier_lib.py  classifier_lib_test.py  clinical_lib.py  clinical_lib_test.py  constants_lib.py  database_lib.py  database_lib_test.py  dicom_client_lib.py  dicom_client_lib_test.py  dicom_lib.py  dicom_lib_test.py  img_lib.py  img_lib_test.py  report_lib.py  report_lib_test.py  schema.py  segmentation_lib.py  segmentation_lib_test.py  series_lib.py  series_lib_test.py  study_lib.py  util_lib.py
backend/lib/migrations/: 0001.create-missing-columns.py  0002.create-study-relation.py  0003.create-archived-status.py
backend/report_templates/: build_template.sh
backend/report_templates/src/: report.html  report_simple.html
backend/runtime/: backend_api.py  backend_api_test.py  database_listener.py  database_listener_test.py  study_reader.py  study_reader_test.py
backend/testdata/database/: database.db  gen_database.sh
backend/testdata/dicom_ucla_BAAATUQQ/1.3.12.2.1107.5.2.30.27595.2013030313205668539705283.0.0.0/: MR.1.3.12.2.1107.5.2.30.27595.2013030313205663217305282  MR.1.3.12.2.1107.5.2.30.27595.2013030313205963223705295  MR.1.3.12.2.1107.5.2.30.27595.2013030313210063084505299  MR.1.3.12.2.1107.5.2.30.27595.2013030313210163090905303  MR.1.3.12.2.1107.5.2.30.27595.2013030313210263392405307  MR.1.3.12.2.1107.5.2.30.27595.2013030313210363161205311  MR.1.3.12.2.1107.5.2.30.27595.2013030313210663252405323
backend/testdata/dicom_ucla_BAAATUQQ/1.3.12.2.1107.5.2.30.27595.2013030313243697959605338.0.0.0/: MR.1.3.12.2.1107.5.2.30.27595.2013030313243965845905386
backend/testdata/dicom_ucla_BAAATUQQ/1.3.12.2.1107.5.2.30.27595.2013030313254723273105400.0.0.0/: MR.1.3.12.2.1107.5.2.30.27595.2013030313254714852305395  (+8 more)
backend/testutil/: unittest.py
backend/tools/: _boilerplate.py  calculate_areas.py  export_study.py  get_dicom_metadata.py  inspect_db.py  select_dicoms_for_classification.py  show_tensorflow_cpus_gpus.py
backend/tools/bilwaj_model_tester/: main.py
gitlab/qa/: .gitignore  get_studies.py  pyproject.toml  upload_studies.py
gitlab/qa/lib/: schema.py
misc/histogram_calculator/: app.py  pyproject.toml
(+597 files in other folders)
