[tool.poetry]
name = "upload_studies"
version = "0.1.0"
description = "Tool for uploading studies to PostgreSQL"
authors = ["Billy Cao <billy@spineai.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pony = "^0.7.13"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
