[tool.poetry]
name = "histogram_calculator"
version = "0.1.0"
description = ""
authors = ["Billy Cao <the.billy.c@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.1"
scikit-image = "^0.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
